#2672 initial JDK11 support